test/fixtures/fail/unterminated_if.l4gs.g
; Missing `end if` — the control block is never closed.

        if 1
                db 0
